# esphome-media-player

./: .gitignore  README.md
.github/workflows/: publish-firmware.yml  publish-pages.yml
builds/: guition-esp32-p4-jc8012p4a1.factory.yaml  guition-esp32-s3-4848s040.factory.yaml
components/artwork_image/: __init__.py  artwork_image.cpp  artwork_image.h  artwork_url.h  bmp_image.cpp  bmp_image.h  image_decoder.cpp  image_decoder.h  jpeg_image.cpp  jpeg_image.h  png_image.cpp  png_image.h
components/gsl3680/: README.md  gsl3680.cpp  gsl3680.h  gsl3680_firmware.h  gsl_point_id.cpp  gsl_point_id.h  touchscreen.py
components/improv_serial/: improv_serial_component.cpp  improv_serial_component.h
components/libjpeg-turbo-esp32/: CMakeLists.txt  LICENSE.md  README.ijg
components/libjpeg-turbo-esp32/src/: jconfig.h  jconfigint.h  jmemnobs.c  jversion.h
components/libjpeg-turbo-esp32/src/wrapper/: jdapistd-12.c  jdapistd-16.c  jdcoefct-12.c  jdcolor-12.c  jdcolor-16.c  jddctmgr-12.c  jddiffct-12.c  jddiffct-16.c  jdlossls-12.c  jdlossls-16.c  jdmainct-12.c  jdmainct-16.c  jdmerge-12.c  jdpostct-12.c  jdpostct-16.c  jdsample-12.c  jdsample-16.c  jidctflt-12.c  jidctfst-12.c  jidctint-12.c  jidctred-12.c  jquant1-12.c  jquant2-12.c  jutils-12.c  jutils-16.c
components/mipi_dsi/: __init__.py  display.py  mipi_dsi.cpp  mipi_dsi.h
components/online_image/: __init__.py  artwork_url.h  image_decoder.cpp  jpeg_image.cpp  jpeg_image.h  jpeg_image_hw.cpp  jpeg_image_hw.h  online_image.cpp  online_image.h
docs/: configurable-settings.md  features.md  index.md  installation.md  roadmap.md  speaker-grouping.md
docs/.vitepress/: config.js
docs/advanced/: display-rotation.md  esphome-config.md  host-port-setup.md  manual-setup.md  raising-an-issue.md  troubleshooting.md
docs/devices/: esp32-p4-jc8012p4a1.md  esp32-s3-4848s040.md
docs/features/: firmware-updates.md  screen-saver.md  settings.md  speaker-grouping.md  tv-source.md
guition-esp32-p4-jc8012p4a1/: dev.yaml  esphome.yaml  packages.yaml
guition-esp32-p4-jc8012p4a1/addon/: backlight.yaml  firmware_update.yaml  music.yaml  speaker_group.yaml  warm_tones.yaml
guition-esp32-s3-4848s040/: dev.yaml  esphome.yaml  packages.yaml
homeassistant/: sonos_speakers.yaml  speakers.yaml
(+30 files in other folders)
