idf_component_register(
    SRCS
        "src/jdapimin.c"
        "src/jdatasrc.c"
        "src/jdhuff.c"
        "src/jdicc.c"
        "src/jdinput.c"
        "src/jdlhuff.c"
        "src/jdmarker.c"
        "src/jdmaster.c"
        "src/jdphuff.c"
        "src/jdtrans.c"
        "src/jcomapi.c"
        "src/jerror.c"
        "src/jmemmgr.c"
        "src/jmemnobs.c"
        "src/jpeg_nbits.c"
        "src/jaricom.c"
        "src/jdarith.c"
        "src/wrapper/jdapistd-8.c"
        "src/wrapper/jdcoefct-8.c"
        "src/wrapper/jdcolor-8.c"
        "src/wrapper/jddctmgr-8.c"
        "src/wrapper/jddiffct-8.c"
        "src/wrapper/jdlossls-8.c"
        "src/wrapper/jdmainct-8.c"
        "src/wrapper/jdmerge-8.c"
        "src/wrapper/jdpostct-8.c"
        "src/wrapper/jdsample-8.c"
        "src/wrapper/jidctflt-8.c"
        "src/wrapper/jidctfst-8.c"
        "src/wrapper/jidctint-8.c"
        "src/wrapper/jidctred-8.c"
        "src/wrapper/jquant1-8.c"
        "src/wrapper/jquant2-8.c"
        "src/wrapper/jutils-8.c"
        # 12-bit precision wrappers
        "src/wrapper/jdapistd-12.c"
        "src/wrapper/jdcoefct-12.c"
        "src/wrapper/jdcolor-12.c"
        "src/wrapper/jddctmgr-12.c"
        "src/wrapper/jddiffct-12.c"
        "src/wrapper/jdlossls-12.c"
        "src/wrapper/jdmainct-12.c"
        "src/wrapper/jdmerge-12.c"
        "src/wrapper/jdpostct-12.c"
        "src/wrapper/jdsample-12.c"
        "src/wrapper/jidctflt-12.c"
        "src/wrapper/jidctfst-12.c"
        "src/wrapper/jidctint-12.c"
        "src/wrapper/jidctred-12.c"
        "src/wrapper/jquant1-12.c"
        "src/wrapper/jquant2-12.c"
        "src/wrapper/jutils-12.c"
        # 16-bit precision wrappers
        "src/wrapper/jdapistd-16.c"
        "src/wrapper/jdcolor-16.c"
        "src/wrapper/jddiffct-16.c"
        "src/wrapper/jdlossls-16.c"
        "src/wrapper/jdmainct-16.c"
        "src/wrapper/jdpostct-16.c"
        "src/wrapper/jdsample-16.c"
        "src/wrapper/jutils-16.c"
    INCLUDE_DIRS "src"
)

target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-shift-negative-value
    -Wno-implicit-fallthrough
)
